Replace deprecated newInstance on PDU